hard-gists/cc3c187172ac848bd896ecb2b812dc51/run.log
=== Docker Run Log for cc3c187172ac848bd896ecb2b812dc51 ===
Started at: Mi 29. Okt 20:17:31 CET 2025

[2025-10-29 20:17:32] START: Running container for cc3c187172ac848bd896ecb2b812dc51
[2025-10-29 20:17:32] SUCCESS: Container 705fcf90cb9ea3aca907dfd35bba03e9fb40769aab05a6489e3bf310ecb5e28b started for cc3c187172ac848bd896ecb2b812dc51
=== Container logs for cc3c187172ac848bd896ecb2b812dc51 ===
  File "/snippet.py", line 63
    print jp2, " saved"
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for cc3c187172ac848bd896ecb2b812dc51 ===
[2025-10-29 20:17:34] INFO: Container 705fcf90cb9ea3aca907dfd35bba03e9fb40769aab05a6489e3bf310ecb5e28b has stopped
